Bug #28348 Dropped tables not removed from LCP
Submitted: 10 May 2007 11:19 Modified: 23 May 2007 17:24
Reporter: Tomas Ulin
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.1 OS:Any
Assigned to: Jonas Oreland Target Version:

[10 May 2007 11:19] Tomas Ulin
Description:
create a few tables...

do all dump 7099 to force lcp's

look at LCP in ndb fs... you'll see files with table id's

drop the tables

do all dump 7099 to force lcp's

you will see the files are still around, taking up space on disk

How to repeat:
.
[14 May 2007 10:34] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/26570

ChangeSet@1.2477, 2007-05-14 10:34:21+02:00, jonas@perch.ndb.mysql.com +4 -0
  ndb - bug#28348
    remove LCP files when dropping table
[14 May 2007 11:41] Jonas Oreland
pushed to 51-ndb, 51-telco & telco-6.1

not a bug in 4.1/5.0
[23 May 2007 10:24] Bugs System
Pushed into 5.1.19-beta
[23 May 2007 17:24] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.1.19 and 5.1.15-ndb-6.1.8 changelogs.