ndb - bug#28348   remove LCP files when dropping table